sensor test works

--- a/itemize/data/test/sensors/temperature/index.properties
+++ b/itemize/data/test/sensors/temperature/index.properties
@@ -20,6 +20,8 @@ properties.temperature.error.TO_SMALLER_THAN_FROM = The maximum temperature is s
 
 policies.edit.REQUIRES_SECURITY_CODE.title = Security code confirmation
 policies.edit.REQUIRES_SECURITY_CODE.fail = Invalid security code provided
+policies.read.REQUIRES_SECURITY_CODE.title = Security code confirmation
+policies.read.REQUIRES_SECURITY_CODE.fail = Invalid security code provided
 
 [es]
 name = Sensor de Temperatura
@@ -43,3 +45,5 @@ properties.temperature.error.TO_SMALLER_THAN_FROM = La temperatura máxima es me
 
 policies.edit.REQUIRES_SECURITY_CODE.title = Confirmación del Código de Seguridad
 policies.edit.REQUIRES_SECURITY_CODE.fail = Código de seguridad inválido
+policies.read.REQUIRES_SECURITY_CODE.title = Confirmación del Código de Seguridad
+policies.read.REQUIRES_SECURITY_CODE.fail = Código de seguridad inválido
