--- a/itemize/data/test/sensors/temperature/index.properties
+++ b/itemize/data/test/sensors/temperature/index.properties
@@ -3,6 +3,7 @@ name = Temperature Sensor
 fts_search_field_label = Search for a temperature sensor
 fts_search_field_placeholder = eg. Name / Description / Current Temperature
 custom.create = Add a new Temperature Sensor
+custom.edit = Edit temperature sensor
 custom.search = Search for a Temperature Sensor
 
 properties.temperature.label = Temperature
@@ -28,6 +29,7 @@ name = Sensor de Temperatura
 fts_search_field_label = Busque un Sensor de Temperatura
 fts_search_field_placeholder = ej. Nombre / Descripción / Temperatura Actual
 custom.create = Añadir un nuevo sensor de temperatura
+custom.edit = Edite el sensor de temperatura
 custom.search = Buscar un sensor de temperatura
 
 properties.temperature.label = Temperatura
