--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jsdom": "^15.2.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.5",
+    "material-ui-flat-pagination": "^4.0.0",
     "node-fetch": "^2.6.0",
     "pg": "^7.15.1",
     "prompt-confirm": "^2.0.4",
