--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/socket.io": "^2.1.4",
     "body-parser": "^1.19.0",
     "comlink": "^4.2.0",
+    "core-js": "^3.6.4",
     "diacritics": "^1.3.0",
     "dompurify": "^2.0.7",
     "express": "^4.17.1",
@@ -43,9 +44,9 @@
     "prompt-confirm": "^2.0.4",
     "react-dropzone": "^10.2.1",
     "redis": "^2.8.0",
+    "regenerator-runtime": "^0.13.3",
     "sharp": "^0.23.4",
-    "socket.io": "^2.3.0",
-    "webpack-bundle-analyzer": "^3.6.0"
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
@@ -79,12 +80,12 @@
     "autosuggest-highlight": "^3.1.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "bcrypt": "^3.0.7",
     "colors": "^1.4.0",
     "convert-units": "^2.3.4",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^2.1.1",
     "debug": "^4.1.1",
     "deep-equal": "^1.1.1",
@@ -97,7 +98,7 @@
     "leaflet": "^1.6.0",
     "mini-css-extract-plugin": "^0.5.0",
     "moment": "^2.24.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "null-loader": "^0.1.1",
     "pretty-bytes": "^5.3.0",
     "properties-reader": "0.0.16",
@@ -118,6 +119,7 @@
     "url-loader": "^1.1.2",
     "uuid": "^3.3.3",
     "webpack": "^4.41.4",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10"
   }
 }
