--- a/itemize/data/index.properties
+++ b/itemize/data/index.properties
@@ -58,6 +58,9 @@ error.NOTHING_TO_UPDATE = Nothing to update
 error.MUST_BE_LOGGED_IN = You must be logged in
 error.USER_BLOCKED = You have been banned
 error.USER_REMOVED = The account related to this session has been removed
+error.INVALID_PROPERTY = Invalid Property
+error.INVALID_INCLUDE = Invalid Include
+error.INVALID_POLICY = Policy security checks have failed
 
 [es]
 name = Español
@@ -119,3 +122,6 @@ error.NOTHING_TO_UPDATE = No existen cambios para actualizar
 error.MUST_BE_LOGGED_IN = Debes iniciar sesión para realizar esta acción
 error.USER_BLOCKED = Usted está baneado
 error.USER_REMOVED = La cuenta relacionada con esta sesión ha sido eliminada
+error.INVALID_PROPERTY = Propiedad Inválida
+error.INVALID_INCLUDE = Elemento de Inclusión Inválido
+error.INVALID_POLICY = Chequeos de seguridad han fallado
