--- a/itemize/package.json
+++ b/itemize/package.json
@@ -4,27 +4,11 @@
   "description": "Itemize",
   "main": "index.js",
   "scripts": {
-    "install": "tsc",
-    "build": "env NODE_ENV=development webpack && webpack && node ./dist/itemize/builder/index.js",
-    "webpack-dev": "env NODE_ENV=development webpack",
-    "webpack": "webpack",
-    "build-data": "node ./dist/itemize/builder/index.js",
-    "start": "node ./dist/src/server/index.js",
-    "build-database": "node ./dist/itemize/dbbuilder/index.js"
+    "install": "tsc"
   },
   "author": "Edward Gonzalez",
   "license": "ISC",
   "dependencies": {
-    "@types/diacritics": "^1.3.1",
-    "@types/dompurify": "^2.0.0",
-    "@types/graphql-fields": "^1.3.2",
-    "@types/graphql-upload": "^8.0.3",
-    "@types/jsdom": "^12.2.4",
-    "@types/jsonwebtoken": "^8.3.5",
-    "@types/node-fetch": "^2.5.4",
-    "@types/redis": "^2.8.14",
-    "@types/sharp": "^0.23.1",
-    "@types/socket.io": "^2.1.4",
     "body-parser": "^1.19.0",
     "comlink": "^4.2.0",
     "core-js": "^3.6.4",
@@ -38,28 +22,36 @@
     "jsdom": "^15.2.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.5",
-    "material-ui-flat-pagination": "^4.0.0",
     "node-fetch": "^2.6.0",
     "pg": "^7.15.1",
     "prompt-confirm": "^2.0.4",
     "react-dropzone": "^10.2.1",
     "redis": "^2.8.0",
-    "regenerator-runtime": "^0.13.3",
     "sharp": "^0.23.4",
     "socket.io": "^2.3.0",
-    "worker-injector-generator-plugin": "^1.0.1"
+    "graphql": "^14.5.8",
+    "bcrypt": "^3.0.7",
+    "colors": "^1.4.0",
+    "properties-reader": "0.0.16",
+    "source-map-support": "^0.5.16",
+    "html-minifier": "^4.0.0",
+    "svgo": "^1.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-transform-regenerator": "^7.7.5",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/preset-react": "^7.7.4",
-    "@babel/preset-typescript": "^7.7.7",
     "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.8.0",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/pickers": "^3.2.8",
+    "@types/diacritics": "^1.3.1",
+    "@types/dompurify": "^2.0.0",
+    "@types/graphql-fields": "^1.3.2",
+    "@types/graphql-upload": "^8.0.3",
+    "@types/jsdom": "^12.2.4",
+    "@types/jsonwebtoken": "^8.3.5",
+    "@types/node-fetch": "^2.5.4",
+    "@types/redis": "^2.8.14",
+    "@types/sharp": "^0.23.1",
+    "@types/socket.io": "^2.1.4",
     "@types/autosuggest-highlight": "^3.1.0",
     "@types/bcrypt": "^3.0.0",
     "@types/colors": "^1.2.1",
@@ -79,47 +71,23 @@
     "@types/uuid": "^3.4.6",
     "ajv": "^6.10.2",
     "autosuggest-highlight": "^3.1.1",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "bcrypt": "^3.0.7",
-    "colors": "^1.4.0",
     "convert-units": "^2.3.4",
-    "css-loader": "^2.1.1",
     "debug": "^4.1.1",
     "deep-equal": "^1.1.1",
-    "graphql": "^14.5.8",
     "history": "^4.10.1",
-    "html-minifier": "^4.0.0",
     "idb": "^4.0.5",
-    "install": "^0.12.2",
     "json-source-map": "^0.4.0",
     "leaflet": "^1.6.0",
-    "mini-css-extract-plugin": "^0.5.0",
     "moment": "^2.24.0",
-    "node-sass": "^4.13.1",
-    "null-loader": "^0.1.1",
     "pretty-bytes": "^5.3.0",
-    "properties-reader": "0.0.16",
     "react": "^16.12.0",
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.12.0",
     "react-leaflet": "^2.6.1",
     "react-quill": "^1.3.3",
     "react-router-dom": "^5.1.2",
-    "sass-loader": "^7.3.1",
     "socket.io-client": "^2.3.0",
-    "source-map-loader": "^0.2.4",
-    "source-map-support": "^0.5.16",
-    "svgo": "^1.3.2",
-    "tslint": "^5.20.1",
-    "tslint-react": "^3.6.0",
-    "typescript": "^3.7.4",
-    "url-loader": "^1.1.2",
     "uuid": "^3.3.3",
-    "webpack": "^4.41.4",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10"
+    "regenerator-runtime": "^0.13.3"
   }
 }
