--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "properties-reader": "0.0.16",
     "source-map-support": "^0.5.16",
     "html-minifier": "^4.0.0",
-    "svgo": "^1.3.2"
-  },
-  "devDependencies": {
+    "svgo": "^1.3.2",
+    
+    "typescript": "^3.7.4",
     "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.8.0",
     "@material-ui/icons": "^4.5.1",
@@ -88,7 +88,6 @@
     "react-router-dom": "^5.1.2",
     "socket.io-client": "^2.3.0",
     "uuid": "^3.3.3",
-    "regenerator-runtime": "^0.13.3",
-    "typescript": "^3.7.4"
+    "regenerator-runtime": "^0.13.3"
   }
 }
