--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "source-map-support": "^0.5.16",
+    "sudo-prompt": "^9.1.1",
     "svgo": "^1.3.2",
     "typescript": "^3.7.4",
     "uuid": "^3.3.3"
