--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "dompurify": "^2.0.7",
     "form-data": "^3.0.0",
     "node-fetch": "^2.6.0",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "prompt-confirm": "^2.0.4"
   },
   "devDependencies": {
     "@date-io/moment": "^1.3.13",
@@ -83,7 +84,6 @@
     "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.6.0",
     "pretty-bytes": "^5.3.0",
-    "prompt-confirm": "^2.0.4",
     "react": "^16.12.0",
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.12.0",
