--- a/schema/main-i18n.properties
+++ b/schema/main-i18n.properties
@@ -41,7 +41,7 @@ image_uploader_delete_file = Delete Picture
 
 callout_exclude_warning = Warning!... this will mark your item as incomplete
 
-unit_dialog_title = Select an Unit
+unit_dialog_title = Select a Unit
 unit_dialog_others = Other Units
 unit_dialog_metric = Metric
 unit_dialog_imperial = Imperial
@@ -61,6 +61,70 @@ error.USER_REMOVED = The account related to this session has been removed
 error.INVALID_PROPERTY = Invalid Property
 error.INVALID_INCLUDE = Invalid Include
 error.INVALID_POLICY = Policy security checks have failed
+
+[de]
+name = Deutsch
+number_decimal_separator = ,
+word_separator = ,
+currency_format = $N
+
+yes = ja
+no = nein
+unspecified = unbestimmt
+any = alle
+
+cancel = abbrechen
+ok = ok
+
+close = schliessen
+
+format_bold = fett
+format_italic = kursiv
+format_underline = unterstrichen
+format_title = Titel
+format_quote = Zitat
+format_list_numbered = Nummerierung
+format_list_bulleted = Liste
+format_add_image = Bild einfügen
+format_add_file = Datei einfügen
+format_add_video = Video einfügen
+
+file_uploader_placeholder_active = Dateien hier her ziehen...
+image_uploader_placeholder_active = Bilder hier her ziehen...
+file_uploader_placeholder_active_single = Datei hier her ziehen...
+image_uploader_placeholder_active_single = Bild hier her ziehen...
+file_uploader_invalid_type = Dateityp unpassend
+image_uploader_invalid_type = Datai ist kein Bild
+file_uploader_file_too_big = Datei ist zu gross, maximum Dateigrösse ist {0}
+image_uploader_file_too_big = Bild ist zu gross, maximum Bildgrösse ist {0}
+file_uploader_byte_limit_exceed = Sie haben die erlaubte Menge {0} für Dateien überschritten
+file_uploader_select_file = Datei auswählen
+image_uploader_select_file = Bild auswählen
+file_uploader_delete_file = Datei löschen
+image_uploader_delete_file = Bild löschen
+
+callout_exclude_warning = Warnung!... dies wird ihren Artikel als unvollständig markieren
+
+unit_dialog_title = wählen Sie eine Einheit
+unit_dialog_others = andere Einheiten
+unit_dialog_metric = Metrisch
+unit_dialog_imperial = Zoll
+
+error.INVALID_CREDENTIALS = ungültiger Benutzer oder Password
+error.BLOCKED = der Artikel ist gesperrt
+error.NOT_FOUND = der Artikel wurde nicht gefunden
+error.FORBIDDEN = verboten
+error.CANT_CONNECT = kann nicht mit Server verbinden
+error.INVALID_DATA_SUBMIT_REFUSED = einige Felder sind ungültig
+error.INTERNAL_SERVER_ERROR = interner Server Fehler
+error.UNSPECIFIED = undefinierter Fehler
+error.NOTHING_TO_UPDATE = keine Änderungen
+error.MUST_BE_LOGGED_IN = Sie müssen eingeloggt sein
+error.USER_BLOCKED = Sie wurden mit einem Verbot belegt
+error.USER_REMOVED = das Konto für diese Sitzung wurde entfernt
+error.INVALID_PROPERTY = ungültige Eigenschaft
+error.INVALID_INCLUDE = ungültige Einbindung
+error.INVALID_POLICY = Sicherheitsabfrage gescheitert
 
 [es]
 name = Español
