--- a/schema/main-i18n.properties
+++ b/schema/main-i18n.properties
@@ -1,5 +1,5 @@
 [en]
-name = English
+name = english
 number_decimal_separator = .
 word_separator = ,
 currency_format = $N
@@ -25,42 +25,176 @@ format_add_image = add image
 format_add_file = add file
 format_add_video = add embed video
 
-file_uploader_placeholder_active = Drop your files here...
-image_uploader_placeholder_active = Drop your pictures here...
-file_uploader_placeholder_active_single = Drop your file here...
-image_uploader_placeholder_active_single = Drop your picture here...
-file_uploader_invalid_type = Invalid File Type
-image_uploader_invalid_type = This file is not an image
-file_uploader_file_too_big = File is too big, maximum file size is {0}
-image_uploader_file_too_big = Your picture is too big, maximum file size is {0}
-file_uploader_byte_limit_exceed = You have surpassed the limit of {0} for file uploads
-file_uploader_select_file = Select File
-image_uploader_select_file = Select Picture
-file_uploader_delete_file = Delete File
-image_uploader_delete_file = Delete Picture
+file_uploader_placeholder_active = drop your files here...
+image_uploader_placeholder_active = drop your pictures here...
+file_uploader_placeholder_active_single = drop your file here...
+image_uploader_placeholder_active_single = drop your picture here...
+file_uploader_invalid_type = invalid file Type
+image_uploader_invalid_type = this file is not an image
+file_uploader_file_too_big = file is too big, maximum file size is {0}
+image_uploader_file_too_big = your picture is too big, maximum file size is {0}
+file_uploader_byte_limit_exceed = you have surpassed the limit of {0} for file uploads
+file_uploader_select_file = select file
+image_uploader_select_file = select picture
+file_uploader_delete_file = delete file
+image_uploader_delete_file = delete picture
 
-callout_exclude_warning = Warning!... this will mark your item as incomplete
+callout_exclude_warning = warning!... this will mark your item as incomplete
 
-unit_dialog_title = Select a Unit
-unit_dialog_others = Other Units
-unit_dialog_metric = Metric
-unit_dialog_imperial = Imperial
+unit_dialog_title = select a unit
+unit_dialog_others = other units
+unit_dialog_metric = metric
+unit_dialog_imperial = imperial
 
-error.INVALID_CREDENTIALS = Invalid user or password
-error.BLOCKED = The item has been blocked
-error.NOT_FOUND = The item cannot be found
-error.FORBIDDEN = Forbidden
-error.CANT_CONNECT = Canņot communicate with the server
-error.INVALID_DATA_SUBMIT_REFUSED = Some fields are invalid
-error.INTERNAL_SERVER_ERROR = Internal Server Error
-error.UNSPECIFIED = Unspecified Error
-error.NOTHING_TO_UPDATE = Nothing to update
-error.MUST_BE_LOGGED_IN = You must be logged in
-error.USER_BLOCKED = You have been banned
-error.USER_REMOVED = The account related to this session has been removed
-error.INVALID_PROPERTY = Invalid Property
-error.INVALID_INCLUDE = Invalid Include
-error.INVALID_POLICY = Policy security checks have failed
+menu = menu
+
+error.INVALID_CREDENTIALS = invalid user or password
+error.BLOCKED = the item has been blocked
+error.NOT_FOUND = the item cannot be found
+error.FORBIDDEN = forbidden
+error.CANT_CONNECT = canņot communicate with the server
+error.INVALID_DATA_SUBMIT_REFUSED = some fields are invalid
+error.INTERNAL_SERVER_ERROR = internal server error
+error.UNSPECIFIED = unspecified error
+error.NOTHING_TO_UPDATE = nothing to update
+error.MUST_BE_LOGGED_IN = you must be logged in
+error.USER_BLOCKED = you have been banned
+error.USER_REMOVED = the account related to this session has been removed
+error.INVALID_PROPERTY = invalid property
+error.INVALID_INCLUDE = invalid include
+error.INVALID_POLICY = policy security checks have failed
+
+[fi]
+name = suomi
+number_decimal_separator = ,
+word_separator = ,
+currency_format = N$
+
+yes = kyllä
+no = ei
+unspecified = määrittelemätön
+any = mikä tahansa
+
+cancel = perutaa
+ok = ok
+
+close = suljettu
+
+format_bold = lihavoitu
+format_italic = kursivoitu
+format_underline = alleviivaus
+format_title = otsikko
+format_quote = lainaus
+format_list_numbered = numeroitu lista
+format_list_bulleted = lista
+format_add_image = lisää kuva
+format_add_file = lisää tiedosto
+format_add_video = lisää upotettu video
+
+file_uploader_placeholder_active = drop your files here...
+image_uploader_placeholder_active = drop your pictures here...
+file_uploader_placeholder_active_single = drop your file here...
+image_uploader_placeholder_active_single = drop your picture here...
+file_uploader_invalid_type = invalid File Type
+image_uploader_invalid_type = this file is not an image
+file_uploader_file_too_big = file is too big, maximum file size is {0}
+image_uploader_file_too_big = your picture is too big, maximum file size is {0}
+file_uploader_byte_limit_exceed = you have surpassed the limit of {0} for file uploads
+file_uploader_select_file = select File
+image_uploader_select_file = select Picture
+file_uploader_delete_file = delete File
+image_uploader_delete_file = delete Picture
+
+callout_exclude_warning = warning!... this will mark your item as incomplete
+
+unit_dialog_title = select a unit
+unit_dialog_others = other units
+unit_dialog_metric = metric
+unit_dialog_imperial = imperial
+
+menu = menu
+
+error.INVALID_CREDENTIALS = invalid user or password
+error.BLOCKED = the item has been blocked
+error.NOT_FOUND = the item cannot be found
+error.FORBIDDEN = forbidden
+error.CANT_CONNECT = canņot communicate with the server
+error.INVALID_DATA_SUBMIT_REFUSED = some fields are invalid
+error.INTERNAL_SERVER_ERROR = internal server error
+error.UNSPECIFIED = unspecified error
+error.NOTHING_TO_UPDATE = nothing to update
+error.MUST_BE_LOGGED_IN = you must be logged in
+error.USER_BLOCKED = you have been banned
+error.USER_REMOVED = the account related to this session has been removed
+error.INVALID_PROPERTY = invalid property
+error.INVALID_INCLUDE = invalid include
+error.INVALID_POLICY = policy security checks have failed
+
+[ru]
+name = suomi
+number_decimal_separator = ,
+word_separator = ,
+currency_format = N$
+
+yes = kyllä
+no = ei
+unspecified = määrittelemätön
+any = mikä tahansa
+
+cancel = cancel
+ok = ok
+
+close = close
+
+format_bold = bold
+format_italic = italic
+format_underline = underline
+format_title = title
+format_quote = quote
+format_list_numbered = numbered list
+format_list_bulleted = list
+format_add_image = add image
+format_add_file = add file
+format_add_video = add embed video
+
+file_uploader_placeholder_active = drop your files here...
+image_uploader_placeholder_active = drop your pictures here...
+file_uploader_placeholder_active_single = drop your file here...
+image_uploader_placeholder_active_single = drop your picture here...
+file_uploader_invalid_type = invalid File Type
+image_uploader_invalid_type = this file is not an image
+file_uploader_file_too_big = file is too big, maximum file size is {0}
+image_uploader_file_too_big = your picture is too big, maximum file size is {0}
+file_uploader_byte_limit_exceed = you have surpassed the limit of {0} for file uploads
+file_uploader_select_file = select File
+image_uploader_select_file = select Picture
+file_uploader_delete_file = delete File
+image_uploader_delete_file = delete Picture
+
+callout_exclude_warning = warning!... this will mark your item as incomplete
+
+unit_dialog_title = select a unit
+unit_dialog_others = other units
+unit_dialog_metric = metric
+unit_dialog_imperial = imperial
+
+menu = menu
+
+error.INVALID_CREDENTIALS = invalid user or password
+error.BLOCKED = the item has been blocked
+error.NOT_FOUND = the item cannot be found
+error.FORBIDDEN = forbidden
+error.CANT_CONNECT = canņot communicate with the server
+error.INVALID_DATA_SUBMIT_REFUSED = some fields are invalid
+error.INTERNAL_SERVER_ERROR = internal server error
+error.UNSPECIFIED = unspecified error
+error.NOTHING_TO_UPDATE = nothing to update
+error.MUST_BE_LOGGED_IN = you must be logged in
+error.USER_BLOCKED = you have been banned
+error.USER_REMOVED = the account related to this session has been removed
+error.INVALID_PROPERTY = invalid property
+error.INVALID_INCLUDE = invalid include
+error.INVALID_POLICY = policy security checks have failed
 
 [de]
 name = Deutsch
@@ -110,6 +244,8 @@ unit_dialog_others = andere Einheiten
 unit_dialog_metric = Metrisch
 unit_dialog_imperial = Zoll
 
+menu = Menü
+
 error.INVALID_CREDENTIALS = ungültiger Benutzer oder Password
 error.BLOCKED = der Artikel ist gesperrt
 error.NOT_FOUND = der Artikel wurde nicht gefunden
@@ -153,39 +289,107 @@ format_add_image = agregar foto
 format_add_file = agregar archivo
 format_add_video = agregar video embebido
 
-file_uploader_placeholder_active = Suelta tus archivos aquí...
-image_uploader_placeholder_active = Suelta tus fotos aquí...
-file_uploader_placeholder_active_single = Suelta tu archivo aquí...
-image_uploader_placeholder_active_single = Suelta tu foto aquí...
-file_uploader_invalid_type = Tipo de archivo inválido
-image_uploader_invalid_type = El archivo no es una imágen
-file_uploader_file_too_big = El archivo es demasiado grande, el máximo es de {0}
-image_uploader_file_too_big = Tu foto es demasiado grande, el máximo es de {0}
-file_uploader_byte_limit_exceed = Has sobrepasado el límite de {0} para subir archivos
-file_uploader_select_file = Seleccionar Archivo
-image_uploader_select_file = Seleccionar Foto
-file_uploader_delete_file = Borrar Archivo
-image_uploader_delete_file = Borrar Foto
+file_uploader_placeholder_active = suelta tus archivos aquí...
+image_uploader_placeholder_active = suelta tus fotos aquí...
+file_uploader_placeholder_active_single = suelta tu archivo aquí...
+image_uploader_placeholder_active_single = suelta tu foto aquí...
+file_uploader_invalid_type = tipo de archivo inválido
+image_uploader_invalid_type = el archivo no es una imágen
+file_uploader_file_too_big = el archivo es demasiado grande, el máximo es de {0}
+image_uploader_file_too_big = tu foto es demasiado grande, el máximo es de {0}
+file_uploader_byte_limit_exceed = has sobrepasado el límite de {0} para subir archivos
+file_uploader_select_file = seleccionar archivo
+image_uploader_select_file = seleccionar foto
+file_uploader_delete_file = borrar archivo
+image_uploader_delete_file = borrar foto
 
-callout_exclude_warning = Atención!... esto marcará su item como Incompleto
+callout_exclude_warning = atención!... esto marcará su item como incompleto
 
-unit_dialog_title = Seleccione una Unidad
-unit_dialog_others = Otras Unidades
-unit_dialog_metric = Métricas
-unit_dialog_imperial = Imperiales
+unit_dialog_title = seleccione una unidad
+unit_dialog_others = otras Unidades
+unit_dialog_metric = métricas
+unit_dialog_imperial = imperiales
 
-error.INVALID_CREDENTIALS = Contraseña o Usuario Inválido
-error.BLOCKED = El item ha sido bloqueado
-error.NOT_FOUND = El item no existe
-error.FORBIDDEN = Acción Denegada
-error.CANT_CONNECT = No se puede comunicar con el servidor
-error.INVALID_DATA_SUBMIT_REFUSED = Algunos campos son Inválidos
-error.INTERNAL_SERVER_ERROR = Error Interno en el Servidor
-error.UNSPECIFIED = Error desconocido
-error.NOTHING_TO_UPDATE = No existen cambios para actualizar
-error.MUST_BE_LOGGED_IN = Debes iniciar sesión para realizar esta acción
-error.USER_BLOCKED = Usted está baneado
-error.USER_REMOVED = La cuenta relacionada con esta sesión ha sido eliminada
-error.INVALID_PROPERTY = Propiedad Inválida
-error.INVALID_INCLUDE = Elemento de Inclusión Inválido
-error.INVALID_POLICY = Chequeos de seguridad han fallado
+menu = menú
+
+error.INVALID_CREDENTIALS = contraseña o usuario inválido
+error.BLOCKED = el item ha sido bloqueado
+error.NOT_FOUND = el item no existe
+error.FORBIDDEN = acción denegada
+error.CANT_CONNECT = no se puede comunicar con el servidor
+error.INVALID_DATA_SUBMIT_REFUSED = algunos campos son inválidos
+error.INTERNAL_SERVER_ERROR = error interno en el servidor
+error.UNSPECIFIED = error desconocido
+error.NOTHING_TO_UPDATE = no existen cambios para actualizar
+error.MUST_BE_LOGGED_IN = debes iniciar sesión para realizar esta acción
+error.USER_BLOCKED = usted está baneado
+error.USER_REMOVED = la cuenta relacionada con esta sesión ha sido eliminada
+error.INVALID_PROPERTY = propiedad inválida
+error.INVALID_INCLUDE = elemento de inclusión inválido
+error.INVALID_POLICY = chequeos de seguridad han fallado
+
+[ar]
+name = العربية
+number_decimal_separator = ٫
+word_separator = ،
+currency_format = N$
+
+yes = نعم
+no = ﻻ
+unspecified = غير محدد
+any = أي اختيار
+
+cancel = إلغاء
+ok = حسناً
+
+close = إغلاق
+
+format_bold = عريض
+format_italic = مائل
+format_underline = تسطير
+format_title = عنوان
+format_quote = اقتباس
+format_list_numbered = قائمة مرقمة
+format_list_bulleted = قائمة
+format_add_image = إضافة صورة
+format_add_file = إضافة ملف
+format_add_video = إضافة فيديو
+
+file_uploader_placeholder_active = ضع ملفاتك هنا
+image_uploader_placeholder_active = ضع صورك هنا
+file_uploader_placeholder_active_single = ضع ملفاتك هنا
+image_uploader_placeholder_active_single = ضع صورك هنا
+file_uploader_invalid_type = نمط الملف غير صحح
+image_uploader_invalid_type = هذا الملف ليس صورة
+file_uploader_file_too_big = الملف كبير جدا، الحد الأقصى لحجم الملف {0}
+image_uploader_file_too_big = صورتك كبيرة جدا، الحد الأقصى لحجم الملف {0}
+file_uploader_byte_limit_exceed = لقد تجاوزت حد {0} لتحميل الملفات
+file_uploader_select_file = اختيار ملف
+image_uploader_select_file = اختيار صورة
+file_uploader_delete_file = حذف ملف
+image_uploader_delete_file = حذف صورة
+
+callout_exclude_warning = تحذير !... هذا سيميز مادتك على أنها غير مكتملة
+
+unit_dialog_title = اختر وحدة
+unit_dialog_others = وحدات اخرى
+unit_dialog_metric = المقياس المتري
+unit_dialog_imperial = المقياس البريطاني
+
+menu = لائحة
+
+error.INVALID_CREDENTIALS = مستخدم او كلمة سر غير صحيحة
+error.BLOCKED = المادة تم حظرها
+error.NOT_FOUND = لا يمكن إيجاد هذه المادة
+error.FORBIDDEN = ممنوع
+error.CANT_CONNECT = لا يمكن الاتصال مع السيرفر
+error.INVALID_DATA_SUBMIT_REFUSED = بعض الحقول غير مناسبة
+error.INTERNAL_SERVER_ERROR = عطل داخلي للسيرفر
+error.UNSPECIFIED = عطل غير محدد
+error.NOTHING_TO_UPDATE = لا يوجد شيء للتحديث
+error.MUST_BE_LOGGED_IN = يجب تسجيل الدخول
+error.USER_BLOCKED = تم حظرك
+error.USER_REMOVED = تم إزالة الحساب المتعلق بهذه الجلسة
+error.INVALID_PROPERTY = خاصية غير مناسبة
+error.INVALID_INCLUDE = مضمون غير مناسب
+error.INVALID_POLICY = فشل إجراءات السياسة الأمنية
