--- a/package.json
+++ b/package.json
@@ -13,83 +13,83 @@
   "author": "Edward Gonzalez",
   "license": "ISC",
   "dependencies": {
-    "@types/diacritics": "^1.3.1",
-    "@types/graphql-upload": "^8.0.3",
-    "@types/sharp": "^0.23.1",
-    "@types/deep-equal": "^1.0.1",
-    "@types/bcrypt": "^3.0.0",
-    "@types/uuid": "^3.4.6",
-    "@types/properties-reader": "0.0.1",
-    "@types/html-minifier": "^3.5.3",
-    "@types/dompurify": "^2.0.0",
-    "@types/svgo": "^1.3.0",
-    "@types/node-fetch": "^2.5.4",
-    "@types/read": "0.0.28",
-    "@types/jsdom": "^12.2.4",
     "@date-io/moment": "^1.3.13",
-    "@types/react-router-dom": "^5.1.3",
-    "@material-ui/core": "^4.8.0",
+    "@material-ui/core": "^4.9.3",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/pickers": "^3.2.8",
+    "@types/autosuggest-highlight": "^3.1.0",
+    "@types/bcrypt": "^3.0.0",
+    "@types/debug": "^4.1.5",
+    "@types/deep-equal": "^1.0.1",
+    "@types/diacritics": "^1.3.1",
+    "@types/dompurify": "^2.0.0",
+    "@types/express": "^4.17.2",
+    "@types/graphql-fields": "^1.3.2",
+    "@types/graphql-upload": "^8.0.3",
+    "@types/html-minifier": "^3.5.3",
+    "@types/jsdom": "^12.2.4",
+    "@types/jsonwebtoken": "^8.3.5",
+    "@types/node": "^13.1.1",
+    "@types/node-fetch": "^2.5.4",
+    "@types/pg": "^7.14.0",
+    "@types/properties-reader": "0.0.1",
     "@types/react-autosuggest": "^9.3.13",
-    "html-minifier": "^4.0.0",
-    "json-source-map": "^0.4.0",
-    "properties-reader": "0.0.16",
-    "read": "^1.0.7",
-    "sudo-prompt": "^9.1.1",
-    "svgo": "^1.3.2",
-    "typescript": "^3.7.4",
-    "pg": "^7.15.1",
-    "knex": "^0.16.5",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/read": "0.0.28",
+    "@types/redis": "^2.8.14",
+    "@types/sharp": "^0.23.1",
+    "@types/socket.io": "^2.1.4",
+    "@types/socket.io-client": "^1.4.32",
+    "@types/svgo": "^1.3.0",
+    "@types/uuid": "^3.4.6",
     "ajv": "^6.10.2",
-    "colors": "^1.4.0",
-    "diacritics": "^1.3.0",
-    "graphql": "^14.5.8",
-    "graphql-upload": "^9.0.0",
-    "sharp": "^0.23.4",
-    "deep-equal": "^1.1.1",
+    "autosuggest-highlight": "^3.1.1",
     "bcrypt": "^3.0.7",
-    "moment": "^2.24.0",
-    "jsdom": "^15.2.1",
-    "dompurify": "^2.0.7",
-    "form-data": "^3.0.0",
-    "node-fetch": "^2.6.0",
-    "uuid": "^3.3.3",
-    "prompt-confirm": "^2.0.4",
     "body-parser": "^1.19.0",
+    "colors": "^1.4.0",
+    "comlink": "^4.2.0",
     "convert-units": "^2.3.4",
     "core-js": "^3.6.4",
     "debug": "^4.1.1",
-    "idb": "^4.0.5",
+    "deep-equal": "^1.1.1",
+    "diacritics": "^1.3.0",
+    "dompurify": "^2.0.7",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
+    "form-data": "^3.0.0",
+    "graphql": "^14.5.8",
     "graphql-fields": "^2.0.3",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0",
-    "comlink": "^4.2.0",
+    "graphql-upload": "^9.0.0",
+    "history": "^4.10.1",
+    "html-minifier": "^4.0.0",
+    "idb": "^4.0.5",
+    "jsdom": "^15.2.1",
+    "json-source-map": "^0.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.16.5",
+    "leaflet": "^1.6.0",
+    "moment": "^2.24.0",
+    "node-fetch": "^2.6.0",
+    "pg": "^7.15.1",
+    "pretty-bytes": "^5.3.0",
+    "prompt-confirm": "^2.0.4",
+    "properties-reader": "0.0.16",
     "react-autosuggest": "^9.4.3",
     "react-dropzone": "^10.2.1",
     "react-leaflet": "^2.6.1",
     "react-quill": "^1.3.3",
     "react-router-dom": "^5.1.2",
-    "autosuggest-highlight": "^3.1.1",
-    "@types/autosuggest-highlight": "^3.1.0",
-    "@types/debug": "^4.1.5",
-    "@types/express": "^4.17.2",
-    "@types/graphql-fields": "^1.3.2",
-    "@types/jsonwebtoken": "^8.3.5",
-    "@types/node": "^13.1.1",
-    "@types/pg": "^7.14.0",
-    "@types/redis": "^2.8.14",
-    "@types/socket.io": "^2.1.4",
-    "@types/socket.io-client": "^1.4.32",
-    "history": "^4.10.1",
-    "jsonwebtoken": "^8.5.1",
-    "leaflet": "^1.6.0",
-    "pretty-bytes": "^5.3.0",
+    "read": "^1.0.7",
     "redis": "^2.8.0",
     "regenerator-runtime": "^0.13.3",
-    "source-map-support": "^0.5.16"
+    "sharp": "^0.23.4",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
+    "source-map-support": "^0.5.16",
+    "sudo-prompt": "^9.1.1",
+    "svgo": "^1.3.2",
+    "typescript": "^3.7.4",
+    "uuid": "^3.3.3"
   },
   "peerDependencies": {
     "@types/react": "^16.9.17",
