--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/html-minifier": "^3.5.3",
     "@types/jsdom": "^12.2.4",
     "@types/jsonwebtoken": "^8.3.5",
+    "@types/mailgun-js": "^0.22.4",
     "@types/node": "^13.1.1",
     "@types/node-fetch": "^2.5.4",
     "@types/pg": "^7.14.0",
@@ -68,6 +69,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.5",
     "leaflet": "^1.6.0",
+    "mailgun-js": "^0.22.0",
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
     "pg": "^7.15.1",
