--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@date-io/moment": "^1.3.13",
-    "@material-ui/core": "^4.9.3",
+    "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/pickers": "^3.2.8",
     "@types/autosuggest-highlight": "^3.1.0",
@@ -23,27 +23,27 @@
     "@types/deep-equal": "^1.0.1",
     "@types/diacritics": "^1.3.1",
     "@types/dompurify": "^2.0.0",
-    "@types/express": "^4.17.2",
+    "@types/express": "^4.17.4",
     "@types/graphql-fields": "^1.3.2",
     "@types/graphql-upload": "^8.0.3",
     "@types/html-minifier": "^3.5.3",
     "@types/jsdom": "^12.2.4",
-    "@types/jsonwebtoken": "^8.3.5",
+    "@types/jsonwebtoken": "^8.3.8",
     "@types/mailgun-js": "^0.22.4",
-    "@types/node": "^13.1.1",
-    "@types/node-fetch": "^2.5.4",
-    "@types/pg": "^7.14.0",
+    "@types/node": "^13.11.0",
+    "@types/node-fetch": "^2.5.5",
+    "@types/pg": "^7.14.3",
     "@types/properties-reader": "0.0.1",
     "@types/react-autosuggest": "^9.3.13",
     "@types/react-router-dom": "^5.1.3",
     "@types/read": "0.0.28",
-    "@types/redis": "^2.8.14",
+    "@types/redis": "^2.8.17",
     "@types/sharp": "^0.23.1",
     "@types/socket.io": "^2.1.4",
     "@types/socket.io-client": "^1.4.32",
-    "@types/svgo": "^1.3.0",
-    "@types/uuid": "^3.4.6",
-    "ajv": "^6.10.2",
+    "@types/svgo": "^1.3.2",
+    "@types/uuid": "^3.4.8",
+    "ajv": "^6.12.0",
     "autosuggest-highlight": "^3.1.1",
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
@@ -72,25 +72,25 @@
     "mailgun-js": "^0.22.0",
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
-    "pg": "^7.15.1",
+    "pg": "^7.18.2",
     "pretty-bytes": "^5.3.0",
     "prompt-confirm": "^2.0.4",
     "properties-reader": "0.0.16",
     "react-autosuggest": "^9.4.3",
-    "react-dropzone": "^10.2.1",
-    "react-leaflet": "^2.6.1",
-    "react-quill": "^1.3.3",
+    "react-dropzone": "^10.2.2",
+    "react-leaflet": "^2.6.3",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^5.1.2",
     "read": "^1.0.7",
     "redis": "^2.8.0",
-    "regenerator-runtime": "^0.13.3",
+    "regenerator-runtime": "^0.13.5",
     "sharp": "^0.23.4",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "source-map-support": "^0.5.16",
     "sudo-prompt": "^9.1.1",
     "svgo": "^1.3.2",
-    "typescript": "^3.7.4",
+    "typescript": "^3.8.3",
     "uuid": "^3.3.3"
   },
   "peerDependencies": {
@@ -101,10 +101,10 @@
     "deep-equal": "^1.1.1"
   },
   "devDependencies": {
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "deep-equal": "^1.1.1"
+    "@types/react": "^16.9.32",
+    "@types/react-dom": "^16.9.6",
+    "deep-equal": "^1.1.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
