--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "@date-io/moment": "^1.3.13",
-    "@material-ui/core": "^4.9.9",
+    "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.49",
     "@material-ui/pickers": "^3.2.8",
     "@types/autosuggest-highlight": "^3.1.0",
     "@types/bcrypt": "^3.0.0",
