--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^13.11.0",
     "@types/node-fetch": "^2.5.5",
     "@types/pg": "^7.14.3",
+    "@types/pkgcloud": "^1.7.3",
     "@types/properties-reader": "0.0.1",
     "@types/react-autosuggest": "^9.3.13",
     "@types/react-router-dom": "^5.1.3",
@@ -74,6 +75,7 @@
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
     "pg": "^7.18.2",
+    "pkgcloud": "^2.2.0",
     "pretty-bytes": "^5.3.0",
     "prompt-confirm": "^2.0.4",
     "properties-reader": "0.0.16",
