--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "react-autosuggest": "^9.4.3",
     "react-dropzone": "^10.2.2",
     "react-leaflet": "^2.6.3",
-    "react-quill": "^1.3.5",
+    "react-quill": "^2.0.0-beta.2",
     "react-router-dom": "^5.1.2",
     "read": "^1.0.7",
     "redis": "^2.8.0",
