--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@material-ui/pickers": "^3.2.8",
     "@types/autosuggest-highlight": "^3.1.0",
     "@types/bcrypt": "^3.0.0",
-    "@types/debug": "^4.1.5",
     "@types/deep-equal": "^1.0.1",
     "@types/diacritics": "^1.3.1",
     "@types/dompurify": "^2.0.1",
@@ -54,7 +53,6 @@
     "comlink": "^4.2.0",
     "convert-units": "^2.3.4",
     "core-js": "^3.6.5",
-    "debug": "^4.1.1",
     "deep-equal": "^1.1.1",
     "diacritics": "^1.3.0",
     "dompurify": "^2.0.11",
@@ -96,7 +94,9 @@
     "sudo-prompt": "^9.1.1",
     "svgo": "^1.3.2",
     "typescript": "^3.8.3",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^4.4.2"
   },
   "peerDependencies": {
     "@types/react": "^16.9.17",
