--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "itemize",
+  "name": "@onzag/itemize",
   "version": "0.0.1",
   "description": "Itemize",
   "bin": {
@@ -18,6 +18,7 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.50",
     "@material-ui/pickers": "^3.2.8",
+    "@onzag/react-quill": "^2.0.0-beta.3",
     "@types/autosuggest-highlight": "^3.1.0",
     "@types/bcrypt": "^3.0.0",
     "@types/deep-equal": "^1.0.1",
@@ -81,7 +82,6 @@
     "react-autosuggest": "^9.4.3",
     "react-dropzone": "^10.2.2",
     "react-leaflet": "^2.6.3",
-    "react-quill": "git+https://github.com/onzag/react-quill.git",
     "react-router-dom": "^5.1.2",
     "react-textarea-autosize": "^7.1.2",
     "read": "^1.0.7",
