--- a/setup/docker/nginx.conf
+++ b/setup/docker/nginx.conf
@@ -24,6 +24,11 @@ http {
 
 	gzip on;
 
+	upstream scalable_servers {
+		ip_hash;
+		UPSTREAM;
+	}
+
 	server {
 		listen 80;
 		listen [::]:80;
@@ -35,22 +40,23 @@ http {
 	server {
 		listen 443 ssl;
 		listen [::]:443 ssl;
-		ssl_certificate /home/ubuntu/cert.pem;
-		ssl_certificate_key /home/ubuntu/key.pem;
-		ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+		ssl_certificate /etc/cert.pem;
+		ssl_certificate_key /etc/key.pem
 		server_name default_server_ssl;
 
 		location /socket.io/ {
-			proxy_pass http://servers:8000;
+			proxy_pass http://scalable_servers/socket.io/;
+			proxy_http_version 1.1;
+		    proxy_set_header Upgrade $http_upgrade;
+		    proxy_set_header Connection "Upgrade";
 		    proxy_set_header Host $host;
 		}
 
 		location / {
-			proxy_pass http://servers:8000/socket.io/;
-		    proxy_http_version 1.1;
-		    proxy_set_header Upgrade $http_upgrade;
-		    proxy_set_header Connection "Upgrade";
+			proxy_pass http://scalable_servers;
 		    proxy_set_header Host $host;
+			proxy_set_header x-real-ip $remote_addr;
+            proxy_set_header x-forwarded-for $proxy_add_x_forwarded_for;
 		}
 	}
 }
