--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onzag/itemize",
-  "version": "0.0.5",
+  "version": "0.0.7",
   "description": "Itemize",
   "bin": {
     "itemize": "./nodejs/main.js"
@@ -96,7 +96,8 @@
     "typescript": "^3.8.3",
     "uuid": "^3.3.3",
     "winston": "^3.2.1",
-    "winston-daily-rotate-file": "^4.4.2"
+    "winston-daily-rotate-file": "^4.4.2",
+    "yaml": "^1.10.0"
   },
   "peerDependencies": {
     "@types/react": "^16.9.17",
