--- a/setup/docker/nginx.conf
+++ b/setup/docker/nginx.conf
@@ -47,16 +47,15 @@ http {
 		location /socket.io/ {
 			proxy_pass http://scalable_servers/socket.io/;
 			proxy_http_version 1.1;
-		    proxy_set_header Upgrade $http_upgrade;
-		    proxy_set_header Connection "Upgrade";
-		    proxy_set_header Host $host;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection "Upgrade";
+			proxy_set_header Host $host;
 		}
 
 		location / {
 			proxy_pass http://scalable_servers;
-		    proxy_set_header Host $host;
-			proxy_set_header x-real-ip $remote_addr;
-            proxy_set_header x-forwarded-for $proxy_add_x_forwarded_for;
+			proxy_set_header Host $host;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		}
 	}
 }
