fixed nginx and ipstack

--- a/setup/docker/nginx.conf
+++ b/setup/docker/nginx.conf
@@ -41,7 +41,7 @@ http {
 		listen 443 ssl;
 		listen [::]:443 ssl;
 		ssl_certificate /etc/cert.pem;
-		ssl_certificate_key /etc/key.pem
+		ssl_certificate_key /etc/key.pem;
 		server_name default_server_ssl;
 
 		location /socket.io/ {
