--- a/setup/docker/Dockerfile
+++ b/setup/docker/Dockerfile
@@ -29,7 +29,7 @@ ENV NODE_ENV development
 
 ENV PORT 8000
 ENV INSTANCE_GROUP_ID DOCKER_UNIDENTIFIED_INSTANCE
-ENV INSTANCE_MODE MANAGER
+ENV INSTANCE_MODE ABSOLUTE
 # ENV INSTANCE_MODE EXTENDED
 
 ENV USING_DOCKER true
