--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "source-map-support": "^0.5.18",
     "sudo-prompt": "^9.1.1",
     "svgo": "^1.3.2",
+    "tarn": "^3.0.0",
     "typescript": "^3.8.3",
     "uuid": "^3.3.3",
     "winston": "^3.2.1",
