--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onzag/itemize",
-  "version": "0.0.27",
+  "version": "0.0.28",
   "description": "Itemize",
   "bin": {
     "itemize": "./nodejs/main.js"
@@ -102,15 +102,15 @@
     "yaml": "^1.10.0"
   },
   "peerDependencies": {
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "deep-equal": "^1.1.1"
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "deep-equal": "^1.1.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "deep-equal": "^1.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
