--- a/setup/docker/nginx-ssl.conf
+++ b/setup/docker/nginx-ssl.conf
@@ -16,6 +16,9 @@ http {
 	include /etc/nginx/mime.types;
 	default_type application/octet-stream;
 
+	ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
+	ssl_prefer_server_ciphers on;
+
 	access_log /var/log/nginx/access.log;
 	error_log /var/log/nginx/error.log;
 
@@ -32,6 +35,14 @@ http {
 		return 301 https://$host$request_uri;
 
 		server_name default_server;
+	}
+
+	server {
+		listen 443 ssl;
+		listen [::]:443 ssl;
+		ssl_certificate /etc/cert.pem;
+		ssl_certificate_key /etc/key.pem;
+		server_name default_server_ssl;
 
 		location /socket.io/ {
 			proxy_pass http://scalable_servers/socket.io/;
