--- a/setup/docker/docker-compose.yml
+++ b/setup/docker/docker-compose.yml
@@ -9,7 +9,7 @@ services:
         depends_on:
             - redis
         environment:
-            - INSTANCE_GROUP_ID=%{INSTANCE_GROUP_ID}
+            - INSTANCE_GROUP_ID=${INSTANCE_GROUP_ID}
             - INSTANCE_MODE=CLUSTER_MANAGER
             - NODE_ENV=%{NODE_ENV}
             - LOG_LEVEL=error
@@ -44,7 +44,7 @@ services:
             - ./config:/home/node/app/config
             - ./logs:/home/node/app/logs
         environment: 
-            - INSTANCE_GROUP_ID=%{INSTANCE_GROUP_ID}
+            - INSTANCE_GROUP_ID=${INSTANCE_GROUP_ID}
             - INSTANCE_MODE=EXTENDED
             - NODE_ENV=%{NODE_ENV}
             - PORT=8000
