--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onzag/itemize",
-  "version": "0.0.80",
+  "version": "0.0.81",
   "description": "Itemize",
   "bin": {
     "itemize": "./nodejs/main.js"
@@ -18,6 +18,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
+    "@onzag/react-dom": "^16.14.0-custom.0",
     "@onzag/react-quill": "^2.0.0-beta.4",
     "@types/autosuggest-highlight": "^3.1.0",
     "@types/bcrypt": "^3.0.0",
