--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onzag/itemize",
-  "version": "0.0.85",
+  "version": "0.0.86",
   "description": "Itemize",
   "bin": {
     "itemize": "./nodejs/main.js"
@@ -104,10 +104,10 @@
     "yaml": "^1.10.0"
   },
   "peerDependencies": {
+    "@types/chai": "^4.2.14",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "chai": "^4.2.0",
-    "mocha": "^8.2.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
   },
