--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@types/read": "0.0.28",
     "@types/redis": "^2.8.18",
     "@types/sharp": "^0.23.1",
+    "@types/slate": "^0.47.7",
+    "@types/slate-react": "^0.22.9",
     "@types/socket.io": "^2.1.4",
     "@types/socket.io-client": "^1.4.32",
     "@types/svgo": "^1.3.2",
@@ -92,6 +94,8 @@
     "redis": "^2.8.0",
     "regenerator-runtime": "^0.13.5",
     "sharp": "^0.23.4",
+    "slate": "^0.59.0",
+    "slate-react": "^0.59.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "source-map-support": "^0.5.18",
