--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onzag/itemize",
-  "version": "0.0.105",
+  "version": "0.0.106.slate",
   "description": "Itemize",
   "bin": {
     "itemize": "./nodejs/main.js"
