--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onzag/itemize",
-  "version": "0.0.118",
+  "version": "0.0.120",
   "description": "Itemize",
   "bin": {
     "itemize": "index.js"
@@ -92,6 +92,7 @@
     "regenerator-runtime": "^0.13.5",
     "sharp": "^0.23.4",
     "slate": "^0.59.0",
+    "slate-history": "^0.59.0",
     "slate-react": "^0.59.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
