--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onzag/itemize",
-  "version": "0.0.135",
+  "version": "0.0.136",
   "description": "Itemize",
   "bin": {
     "itemize": "index.js"
@@ -18,6 +18,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
+    "@onzag/knex": "^0.95.0-next1",
     "@onzag/react-dom": "^16.14.0-custom.0",
     "@types/autosuggest-highlight": "^3.1.0",
     "@types/bcrypt": "^3.0.0",
@@ -73,7 +74,6 @@
     "jsdom": "^15.2.1",
     "json-source-map": "^0.4.0",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^0.21.1",
     "leaflet": "^1.6.0",
     "mailgun-js": "^0.22.0",
     "moment": "^2.24.0",
