--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/slate-react": "^0.22.9",
     "@types/socket.io": "^2.1.4",
     "@types/socket.io-client": "^1.4.32",
+    "@types/stripe": "^8.0.417",
     "@types/svgo": "^1.3.2",
     "@types/uuid": "^3.4.8",
     "ajv": "^6.12.2",
@@ -96,6 +97,7 @@
     "socket.io": "^2.4.0",
     "socket.io-client": "^2.3.0",
     "source-map-support": "^0.5.18",
+    "stripe": "^8.143.0",
     "sudo-prompt": "^9.1.1",
     "svgo": "^1.3.2",
     "tarn": "^3.0.0",
