--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onzag/itemize",
-  "version": "0.0.161",
+  "version": "0.0.162",
   "description": "Itemize",
   "bin": {
     "itemize": "index.js"
@@ -12,13 +12,12 @@
     "docs": "typedoc --plugin typedoc-plugin-markdown && node ./docs/_src/process-src.js"
   },
   "author": "Onza Systems - Edward Gonzalez",
-  "license": "AGPL3",
+  "license": "AGPL-3.0",
   "dependencies": {
     "@date-io/moment": "^1.3.13",
-    "@material-ui/core": "^4.12.1",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.58",
-    "@material-ui/pickers": "^3.3.10",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@onzag/react-dom": "^16.14.0-custom.0",
     "@types/autosuggest-highlight": "^3.1.1",
     "@types/bcrypt": "^3.0.1",
@@ -108,16 +107,24 @@
     "yaml": "^1.10.2"
   },
   "peerDependencies": {
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
+    "@types/react": "^16.14.10",
+    "@types/react-dom": "^16.9.13",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
+    "@material-ui/pickers": "^3.3.10"
   },
   "devDependencies": {
     "@types/react": "^16.14.10",
     "@types/react-dom": "^16.9.13",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
+    "@material-ui/pickers": "^3.3.10",
     "typedoc": "^0.20.37",
     "typedoc-plugin-markdown": "^3.10.2"
   }
