--- a/dev-environment/pgsqlpostgis/Dockerfile
+++ b/dev-environment/pgsqlpostgis/Dockerfile
@@ -1,12 +1,12 @@
-# PGSQL postgis uses postgres 12
-# This is a simplified version of https://github.com/postgis/docker-postgis/blob/master/12-3.0/Dockerfile
+# PGSQL postgis uses postgres 13
+# This is a simplified version of https://github.com/postgis/docker-postgis/blob/master/13-3.2/Dockerfile
 
-FROM postgres:12
+FROM postgres:13-bullseye
 
 ENV POSTGIS_MAJOR 3
-ENV POSTGIS_VERSION 3.0.2+dfsg-2.pgdg100+1
+ENV POSTGIS_VERSION 3.2.0+dfsg-1.pgdg110+1
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
         postgresql-$PG_MAJOR-postgis-$POSTGIS_MAJOR=$POSTGIS_VERSION \
-        postgresql-$PG_MAJOR-postgis-$POSTGIS_MAJOR-scripts=$POSTGIS_VERSION
+        postgresql-$PG_MAJOR-postgis-$POSTGIS_MAJOR-scripts
