--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onzag/itemize",
-  "version": "0.0.172",
+  "version": "0.0.175",
   "description": "Itemize",
   "bin": {
     "itemize": "index.js"
@@ -18,7 +18,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
-    "@onzag/react-dom": "^17.0.3-custom.0",
+    "@onzag/react-dom": "16.14.0-custom.0",
     "@types/autosuggest-highlight": "^3.1.1",
     "@types/bcrypt": "^3.0.1",
     "@types/convert-units": "^2.3.3",
