--- a/package.json
+++ b/package.json
@@ -15,9 +15,6 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "@date-io/moment": "^1.3.13",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
     "@onzag/react-dom": "16.14.0-custom.0",
     "@types/autosuggest-highlight": "^3.1.1",
     "@types/bcrypt": "^3.0.1",
@@ -107,25 +104,29 @@
     "yaml": "^1.10.2"
   },
   "peerDependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/lab": "^5.0.0-alpha.66",
+    "@mui/material": "^5.3.1",
+    "@mui/styles": "^5.3.0",
     "@types/react-dom": "^17.0.11",
     "@types/react": "^17.0.38",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "@material-ui/core": "^4.12.1",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.58",
-    "@material-ui/pickers": "^3.3.10"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/react-dom": "^17.0.11",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/lab": "^5.0.0-alpha.66",
+    "@mui/material": "^5.3.1",
+    "@mui/styles": "^5.3.0",
     "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "@material-ui/core": "^4.12.1",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.58",
-    "@material-ui/pickers": "^3.3.10",
-    "typedoc": "^0.20.37",
-    "typedoc-plugin-markdown": "^3.10.2"
+    "typedoc": "^0.22.11",
+    "typedoc-plugin-markdown": "^3.11.12"
   }
 }
