--- a/package.json
+++ b/package.json
@@ -104,9 +104,10 @@
     "yaml": "^1.10.2"
   },
   "peerDependencies": {
+    "@emotion/css": "^11.7.1",
     "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
     "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.1",
     "@mui/lab": "^5.0.0-alpha.66",
     "@mui/material": "^5.3.1",
@@ -117,9 +118,10 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@emotion/css": "^11.7.1",
     "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
     "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.1",
     "@mui/lab": "^5.0.0-alpha.66",
     "@mui/material": "^5.3.1",
