rid of pgsqlpostgis
Former-commit-id: 10ca4616ba311267008d809b27ec673c8702f640

--- a/setup/docker/docker-compose.yml
+++ b/setup/docker/docker-compose.yml
@@ -74,7 +74,7 @@ services:
             - ./nginx.processed.conf:/etc/nginx/nginx.conf:ro
             - ./nginx-logs:/var/log/nginx
     pgsql:
-        image: pgsqlpostgis:latest
+        image: postgis/postgis:latest
         restart: always
         ports:
             - "%{DB_PORT}:5432"
