--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "typescript": "^4.5.5",
     "uuid": "^3.3.3",
     "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.5",
+    "winston-transport": "^4.5.0",
     "yaml": "^1.10.2"
   },
   "peerDependencies": {
