--- a/setup/docker/docker-compose.yml
+++ b/setup/docker/docker-compose.yml
@@ -56,6 +56,7 @@ services:
             - USING_DOCKER=true
             - NO_SSR=false
             - FAKE_EMAILS=false
+            - FAKE_SMS=false
     redis:
         image: redis:latest
         restart: always
