--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "@date-io/moment": "^1.3.13",
+    "@elastic/elasticsearch": "^8.1.0",
     "@types/autosuggest-highlight": "^3.1.1",
     "@types/bcrypt": "^3.0.1",
     "@types/convert-units": "^2.3.3",
