--- a/setup/docker/docker-compose.yml
+++ b/setup/docker/docker-compose.yml
@@ -61,7 +61,7 @@ services:
         image: redis:latest
         restart: always
         ports:
-            - "%{REDIS_PORT}:6379"
+            - "127.0.0.1:%{REDIS_PORT}:6379"
     nginx:
         image: nginx:latest
         restart: always
@@ -79,7 +79,7 @@ services:
         image: postgis/postgis:latest
         restart: always
         ports:
-            - "%{DB_PORT}:5432"
+            - "127.0.0.1:%{DB_PORT}:5432"
         volumes: 
             - ./pgdata:/var/lib/postgresql/data
         environment:
