--- a/setup/docker/docker-compose.yml
+++ b/setup/docker/docker-compose.yml
@@ -60,8 +60,6 @@ services:
     redis:
         image: redis:latest
         restart: always
-        ports:
-            - "127.0.0.1:%{REDIS_PORT}:6379"
     nginx:
         image: nginx:latest
         restart: always
@@ -86,3 +84,18 @@ services:
             - POSTGRES_USER=%{DB_USER}
             - POSTGRES_PASSWORD=%{DB_PASSWORD}
             - POSTGRES_DB=%{DB_NAME}
+    elastic:
+        image: docker.elastic.co/elasticsearch/elasticsearch:8.2.0
+        restart: always
+        volumes:
+            - ./certs:/usr/share/elasticsearch/config/certs
+            - ./edata:/usr/share/elasticsearch/data
+        environment:
+            - ELASTIC_PASSWORD=%{ELASTIC_PASSWORD}
+    kibana:
+        image: docker.elastic.co/kibana/kibana:8.2.0
+        restart: always
+        ports:
+            - "5601:5601"
+        environment:
+            - ELASTIC_PASSWORD=%{ELASTIC_PASSWORD}
